# DaiTVbobox

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-build.yml
config/: rules.yaml  sources.yaml
docs/superpowers/plans/: 2026-06-25-merge-config-plan.md  2026-06-30-hot-tv-kv-plan.md
output/: config.cn.json  config.hk.json  config.json  hot_tv.json  live.json  movie.json  source_health.json  summary.json  tv.json  variety.json
src/: __init__.py  builder.py  constants.py  health_checker.py  hot_tv.py  models.py  publisher.py  ranker.py  source_fetcher.py  utils.py
src/source_manager/: __init__.py  health_checker.py  models.py  ranker.py
tests/: test_builder.py  test_hot_tv.py  test_integration.py  test_models.py  test_ranker.py  test_utils.py  test_worker.mjs
worker/: backup_v1_stable.js  backup_v2_stable.js  index.js  worker_simple_backup.js
worker/old js/: 2026-06-26-homepage-hot-tv-entry-backup.js  README.md
