# ============================================================
# TVBox 影視聚合系統 — 專案配置
# ============================================================

[project]
name = "DaiTVbobox"
version = "1.0.0"
description = "TVBox 影視聚合系統 — 多源聚合、自動評分、每日更新"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "TVBox Aggregator Team" }
]
keywords = ["tvbox", "video", "aggregator", "multisource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
tvbox-fetch = "src.source_fetcher:main"
tvbox-check = "src.health_checker:main"
tvbox-rank = "src.ranker:main"
tvbox-build = "src.builder:main"
tvbox-publish = "src.publisher:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
